--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Plaster&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #F0EFED;
   --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --font-roboto: 'Roboto', sans-serif;
+  --font-plaster: 'Plaster', sans-serif;
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-roboto);
+}
+
+li {
+    list-style: none;
+    font-size: 20px;
+}
+
+li:before {
+    content:"·";
+    color: rgb(12, 191, 12);
+    font-size:96px;
+    vertical-align:middle;
+    line-height:20px;
 }
